--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BOT_TOKEN=8368433706:AAFFSWTk0kUUoRXsR4_UQrWPlNSZn9WG7A0
-VERCEL_URL=https://your-vercel-app.vercel.app
+VERCEL_URL=https://masterwin-bot.vercel.app
