creaetd sub url

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BOT_TOKEN=8368433706:AAFFSWTk0kUUoRXsR4_UQrWPlNSZn9WG7A0
 VERCEL_URL=https://masterwin-bot.vercel.app
+SUBSCRIPTION_URL=https://masterwin-bot.vercel.app
